--- a/scripts/etcd/test-cf-tls-upgrade/task.yml
+++ b/scripts/etcd/test-cf-tls-upgrade/task.yml
@@ -10,6 +10,7 @@ inputs:
   - name: bbl-state
   - name: infrastructure-ci
   - name: etcd-release
+  - name: cf-deployment
 
 run:
   path: infrastructure-ci/scripts/etcd/test-cf-tls-upgrade/task
