Fix path to non-tls-cf-deployment opsfile
[#142977671]

--- a/pipelines/etcd.yml
+++ b/pipelines/etcd.yml
@@ -399,9 +399,8 @@ jobs:
       resource: infrastructure-ci-bbl-states
     - get: cf-deployment
     - get: cf-deployment-concourse-tasks
-    - get: infrastructure-ci
     - get: ops-files
-      resource: empty-ops-files
+      resource: infrastructure-ci
     - get: release
       resource: etcd-release-develop
       passed: [eats-turbulence]
@@ -416,7 +415,7 @@ jobs:
     file: cf-deployment-concourse-tasks/bosh-deploy-with-created-release/task.yml
     params:
       BBL_STATE_DIR: etcd-cf-tls-upgrade
-      OPS_FILES: infrastructure-ci/scripts/etcd/test-cf-tls-upgrade/opsiles/non-tls-cf-deployment.yml
+      OPS_FILES: scripts/etcd/test-cf-tls-upgrade/opsfiles/non-tls-cf-deployment.yml
       SYSTEM_DOMAIN: etcd-cf-tls-upgrade.infrastructure.cf-app.com
       VARS_STORE_FILE: etcd-cf-tls-upgrade/deployment-vars.yml
     ensure:
