--- a/pipelines/etcd.yml
+++ b/pipelines/etcd.yml
@@ -6,6 +6,7 @@ groups:
   - test-etcd-metrics-server
   - setup-eats-infrastructure
   - delete-eats-deployments
+  - teardown-eats-infrastructure-early
   - eats
   - eats-turbulence
   - teardown-eats-infrastructure
@@ -30,6 +31,7 @@ groups:
   jobs:
   - setup-eats-infrastructure
   - delete-eats-deployments
+  - teardown-eats-infrastructure-early
   - eats
   - eats-turbulence
   - teardown-eats-infrastructure
@@ -272,6 +274,30 @@ jobs:
       put: slack-alert
       params:
         text: {{slack_failure_text}}
+
+- name: teardown-eats-infrastructure-early
+  public: true
+  plan:
+  - aggregate:
+    - get: ci
+      resource: infrastructure-ci
+    - get: bbl-states-repo
+      resource: infrastructure-ci-bbl-states
+      passed:
+      - delete-eats-deployments
+  - task: bbl-destroy
+    file: ci/scripts/common/bbl-destroy/task.yml
+    params:
+      BBL_STATE_DIR: eats
+    on_failure:
+      put: slack-alert
+      params:
+        text: {{slack_failure_text}}
+    ensure:
+      put: infrastructure-ci-bbl-states
+      params:
+        rebase: true
+        repository: bbl-states-repo-out
 
 - name: eats
   public: true
