--- a/scripts/common/manage-gcp-dns/task.yml
+++ b/scripts/common/manage-gcp-dns/task.yml
@@ -13,6 +13,7 @@ inputs:
 params:
   BBL_STATE_DIR:
   GCP_DNS_PROJECT_ID:
+  GCP_DNS_SERVICE_ACCOUNT_EMAIL:
   GCP_DNS_SERVICE_ACCOUNT_KEY:
   GCP_DNS_ZONE_NAME:
   GCP_DNS_RECORD_SET_NAME:
