--- a/scripts/common/manage-gcp-dns/task.yml
+++ b/scripts/common/manage-gcp-dns/task.yml
@@ -17,7 +17,7 @@ params:
   GCP_DNS_SERVICE_ACCOUNT_KEY:
   GCP_DNS_ZONE_NAME:
   GCP_DNS_RECORD_SET_NAME:
-  GCP_DNS_RECORD_TTL:
+  GCP_DNS_RECORD_TTL: 300
   ACTION:
 
 run:
