Scale up doppler to 4 in deploy-cf-tls-upgrade
[#142977671]

Signed-off-by: Christian Ang <cang@pivotal.io>

--- a/scripts/etcd/test-cf-tls-upgrade/opsfiles/non-tls-cf-deployment.yml
+++ b/scripts/etcd/test-cf-tls-upgrade/opsfiles/non-tls-cf-deployment.yml
@@ -1,3 +1,8 @@
+# --- Scale up doppler ---
+- type: replace
+  path: /instance_groups/name=doppler/instances
+  value: 4
+
 # --- Remove consul agent job on etcd ---
 - type: remove
   path: /instance_groups/name=etcd/jobs/name=consul_agent
