Run etcd-consistency-checker tests.
[#144632095]

Signed-off-by: Genevieve LEsperance <glesperance@pivotal.io>

--- a/pipelines/etcd.yml
+++ b/pipelines/etcd.yml
@@ -3,6 +3,7 @@ groups:
   jobs:
   - check-git-submodules
   - test-etcd-proxy
+  - test-etcd-consistency-checker
   - test-etcd-metrics-server
   - setup-eats-infrastructure
   - eats
@@ -204,6 +205,24 @@ jobs:
       params:
         text: {{slack_failure_text}}
 
+- name: test-etcd-consistency-checker
+  public: true
+  plan:
+  - aggregate:
+    - get: etcd-release
+      resource: etcd-release-develop
+      passed:
+      - check-git-submodules
+      trigger: true
+    - get: ci
+      resource: infrastructure-ci
+  - task: test-etcd-consistency-checker
+    file: ci/scripts/etcd/test-etcd-consistency-checker/task.yml
+    on_failure:
+      put: slack-alert
+      params:
+        text: {{slack_failure_text}}
+
 - name: test-etcd-metrics-server
   public: true
   plan:
@@ -229,6 +248,7 @@ jobs:
     - get: etcd-release
       resource: etcd-release-develop
       passed:
+      - test-etcd-consistency-checker
       - test-etcd-proxy
       - test-etcd-metrics-server
       trigger: true
@@ -430,6 +450,7 @@ jobs:
     - get: release
       resource: etcd-release-develop
       passed:
+      - test-etcd-consistency-checker
       - test-etcd-proxy
       - test-etcd-metrics-server
       trigger: true
@@ -692,6 +713,7 @@ jobs:
     - get: release
       resource: etcd-release-develop
       passed:
+      - test-etcd-consistency-checker
       - test-etcd-proxy
       - test-etcd-metrics-server
       trigger: true
