Use a single CI script for running etcd unit tests
[#116563261]

Signed-off-by: Nick Mahoney <nmahoney@pivotal.io>

--- a/scripts/etcd/run-unit-tests/task.yml
+++ b/scripts/etcd/run-unit-tests/task.yml
@@ -10,5 +10,8 @@ inputs:
 - name: etcd-release
 - name: ci
 
+params:
+  TEST_SUITE:
+
 run:
-  path: ci/scripts/etcd/test-etcd-consistency-checker/task
+  path: ci/scripts/etcd/run-unit-tests/task
