--- a/pipelines/etcd.yml
+++ b/pipelines/etcd.yml
@@ -200,7 +200,9 @@ jobs:
     - get: ci
       resource: infrastructure-ci
   - task: test-etcd-proxy
-    file: ci/scripts/etcd/test-etcd-proxy/task.yml
+    file: ci/scripts/etcd/run-unit-test-suite/task.yml
+    params:
+      TEST_SUITE: etcd-proxy
     on_failure:
       put: slack-alert
       params:
@@ -218,7 +220,9 @@ jobs:
     - get: ci
       resource: infrastructure-ci
   - task: test-etcd-consistency-checker
-    file: ci/scripts/etcd/test-etcd-consistency-checker/task.yml
+    file: ci/scripts/etcd/run-unit-test-suite/task.yml
+    params:
+      TEST_SUITE: etcd-consistency-checker
     on_failure:
       put: slack-alert
       params:
@@ -236,7 +240,9 @@ jobs:
     - get: ci
       resource: infrastructure-ci
   - task: test-etcdfab
-    file: ci/scripts/etcd/test-etcdfab/task.yml
+    file: ci/scripts/etcd/run-unit-test-suite/task.yml
+    params:
+      TEST_SUITE: etcdfab
     on_failure:
       put: slack-alert
       params:
