Ungate etcd pipeline on deploy-sample-manifest
[#116563303]

Signed-off-by: Dave Walter <dwalter@pivotal.io>

--- a/pipelines/etcd.yml
+++ b/pipelines/etcd.yml
@@ -1034,7 +1034,7 @@ jobs:
     - get: release-repo
       resource: etcd-release-develop
       passed:
-      - deploy-sample-manifests
+      - teardown-eats-infrastructure
       - teardown-cf-cats-infrastructure
       - teardown-cf-tls-upgrade-infrastructure
       trigger: true
