Test consul with the develop branch of cf-deployment

--- a/pipelines/consul.yml
+++ b/pipelines/consul.yml
@@ -51,7 +51,7 @@ resources:
 - name: cf-deployment
   type: git
   source:
-    branch: master
+    branch: develop
     uri: https://github.com/cloudfoundry/cf-deployment.git
 
 - name: cf-deployment-concourse-tasks
